--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>ETCH-A-SKETCH</h1>
+    <div class="controls">
+      <button class="resize">RESIZE</button>
+    </div>
     <div class="container"></div>
 
     <script src="script.js"></script>
