--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>ETCH-A-SKETCH</h1>
     <div class="controls">
-      <button class="resize">RESIZE</button>
+      <button class="resize">GENENRATE GRID</button>
     </div>
     <div class="container"></div>
 
